# FG_Window_Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowManager.vcxproj  WindowManager.vcxproj.filters  stdafx.h
CMake/: pch_support.cmake
source/Window/: Window.cpp  Window.h
source/WindowManager/: WindowManager.cpp  WindowManager.h
