CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (WindowLibrary)

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( pch_support )

#SET(CMAKE_C++_CREATE_STATIC_LIBRARY 1)

SET (WL_SOURCE_DIR "${PROJECT_SOURCE_DIR}/source")
SET (WL_PCH_SUBDIR ${WL_SOURCE_DIR}/stdafx)
SET (WL_PCH_NAME "stdafx")
SET (WL_PCH_HEADER ${WL_PCH_NAME}.h)
SET (WL_PCH_CPP ${WL_PCH_NAME}.cpp)
SET (WL_PCH_BIN ${WL_PCH_NAME}.pch)
IF(NOT DEFINED(${IM_SOURCE_DIR}))
	SET(IM_PROJECT_DIR "${PROJECT_SOURCE_DIR}/../FG_Input_Library")
	SET(IM_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../FG_Input_Library/source")
ENDIF()

SET(WL_SOURCE_SUBDIRS 
"stdafx"
"Window"
"WindowManager"
)

SET(WL_SOURCE_FILES "")
FOREACH(subdir ${WL_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${WL_SOURCE_DIR}/${subdir}/*.cpp ${WL_SOURCE_DIR}/${subdir}/*.h)
	SET(WL_SOURCE_FILES ${WL_SOURCE_FILES} ${TEMP})
ENDFOREACH()

ADD_LIBRARY (WindowManager
${WL_SOURCE_FILES}
)
FOREACH(subdir ${WL_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${WL_SOURCE_DIR}/${subdir}/*.cpp ${WL_SOURCE_DIR}/${subdir}/*.h)
	MESSAGE(${WL_SOURCE_DIR}/${subdir}/)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${WL_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${WL_PCH_SUBDIR} )
INCLUDE_DIRECTORIES( ${IM_SOURCE_DIR} )

MSVC_SET_PCH(WindowManager
${WL_PCH_SUBDIR}/${WL_PCH_HEADER}
${WL_PCH_SUBDIR}/${WL_PCH_CPP}
)

#SET_TARGET_PROPERTIES(WL PROPERTIES LINKER_LANGUAGE C++)